--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>REC Schedule</title>
-  <link rel="stylesheet"href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <link rel="stylesheet"href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="dns-prefetch" href="//ajax.googleapis.com">
+  <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
 </head>
 <body>
   <div class="container" ng-controller="ScheduleController">
@@ -59,15 +61,15 @@
       </div>
     </div>
     <div class="row footer">
-      <div class="col-xs-12"><small>Designed by <a href="http://mikewu.net">Mike Wu</a>. <br/> 
+      <div class="col-xs-12"><small>Designed by <a href="https://mikewu.net">Mike Wu</a>. <br/> 
       Event schedule provided by <a href="http://www.recreation.ubc.ca/drop-in/">UBC Recreation</a>. <br/>
       Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">flaticon.com</a> and Dave Grandy from <a href="http://fontawesome.io">Font Awesome</a>.</small></div>
   </div>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-cookies.min.js"></script>
-  <script src="js/ui-bootstrap-tpls-0.14.3.min.js"></script>
-  <script src="js/moment.min.js"></script>
-  <script src="js/moment-duration-format.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-cookies.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.14.3/ui-bootstrap.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.1/moment.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/moment-duration-format/1.3.0/moment-duration-format.min.js"></script>
   <script src="app/app.js"></script>
   <script src="app/constant.js"></script>
   <script src="app/filters.js"></script>
